--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>HTML Basics</h1>
         <hr>
         
-        <h2>The "frontend" of a webpage consists of:</h2>
+        <h2>The "backend" of a webpage consists of:</h2>
         
         <ul>
             <li>HTML = HyperText Markup Language</li>
